Closed Bug 541182 Opened 16 years ago Closed 16 years ago

Custom CSS cursor not working

Categories

(Core :: Widget: Win32, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a2
Tracking Status
blocking1.9.2 --- .7+
status1.9.2 --- .7-fixed

People

(Reporter: bzbarsky, Assigned: robarnold)

References

Details

(Keywords: regression)

Attachments

(2 files)

It looks like between 3.5 and 3.6 at least some uses of custom cursors broke. Testcase is attached. This is only a problem on Windows: on Mac they never worked and on Linux they seem to still be working. Martijn, Ria, could one of you maybe hunt down the regression range for this? Hovering over the little orange arrow should show a cursor that has a hand and the text "view gallery" in it.
status1.9.2: --- → ?
Keywords: regression
OS: Mac OS X → Windows Vista
Attached file Testcase
I get this regression range: works: 2009-07-28-04-mozilla-central Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2a1pre) Gecko/20090728 Minefield/3.6a1pre broken: 2009-07-29-04-mozilla-central Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2a1pre) Gecko/20090729 Minefield/3.6a1pre
Bug 502710 in that range looks pretty suspicious. Rob, can you take a look at this, please?
Blocks: 502710
Rather suspicious, but it should have been just code movement and a smidge of refactoring. I will probably get to this next week - I don't think it would be tricky to find out why but I've been wrong about that before :)
It seems that I added a sanity check that the given cursor size should not exceed the system icon size. The system cursor size is 32x32 so even that is not big enough. There is a check for the size along the existing codepath for setting cursors however there is other code using this helper function that does not have similar checks (the tab preview code iirc). However, I think that will fail gracefully so it should be ok just to go ahead and remove the check from the helper function.
Assignee: nobody → tellrob
Status: NEW → ASSIGNED
Attachment #427222 - Flags: review?(jmathies)
Attachment #427222 - Flags: review?(jmathies) → review+
blocking2.0: --- → ?
Keywords: checkin-needed
Attachment #427222 - Attachment description: Remove GetSystemMetric check → Remove GetSystemMetric check [Checkin: Comment 7]
Attachment #427222 - Flags: approval1.9.2.2?
Status: ASSIGNED → RESOLVED
blocking2.0: ? → ---
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a2
Comment on attachment 427222 [details] [diff] [review] Remove GetSystemMetric check [Checkin: Comment 7] I guess there's no way to automate that testcase?
Attachment #427222 - Flags: approval1.9.2.2? → approval1.9.2.3?
Broke again While it worked indeed in a nightly build, it is broken again in rv:1.9.2.2 Gecko/20100316 Firefox/3.6.2 Just check the test case from the older comment. Please check and resolve again! Thank you!
(In reply to comment #10) > Broke again > > While it worked indeed in a nightly build, it is broken again in > rv:1.9.2.2 Gecko/20100316 Firefox/3.6.2 > Just check the test case from the older comment. > Please check and resolve again! Thank you! The patch is still waiting approval to land on the 3.6 branch. Once it gets approval, it can land and you'll see it in the next Firefox 3.6 release.
Any reason why this gets no 1.9.2 approval? If this will not land in 1.9.2, let me know. I'll have to update the MDC docs then.
Requesting blocking for this web functionality regression.
blocking1.9.2: --- → ?
blocking1.9.2: ? → .5+
Comment on attachment 427222 [details] [diff] [review] Remove GetSystemMetric check [Checkin: Comment 7] a=LegNeato for 1.9.2.5. Please ONLY land this on mozilla-1.9.2 default, as we are still working on 1.9.2.4 on the relbranch
Attachment #427222 - Flags: approval1.9.2.4? → approval1.9.2.5+
blocking1.9.2: .5+ → .6+
Attachment #427222 - Flags: approval1.9.2.5+ → approval1.9.2.6+
1. "Platform: x86 Windows Vista", but also x86 Windows XP 2. "status1.9.2: .7-fixed" means, that version 1.9.2.7 will be fixed? That would be great, because (rv:1.9.2.6) Gecko/20100625 Firefox/3.6.6 is not fixed yet. 3. Allowing bigger cursors (again) increases the importance (well, if one would call it importance at all) of resolving Bug 248718 - Tooltip generated by title attribute appears unappropriately compared to current cursor. as well as Bug 296191 - Custom CSS cursors [cursor: url(...);] sometimes overlay the link tooltips [title="..."] ... Thanks for your great work! (And if this bug will be fixed in 1.9.2.7: Thanks for fixing!)
> 2. "status1.9.2: .7-fixed" means, that version 1.9.2.7 will be fixed? Yes, unless there's another unscheduled firedrill release.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: