Bug 541182 - Custom CSS cursor not working; Remove GetSystemMetric check. r=jmathies.